--- a/docs/project-flow.ipynb
+++ b/docs/project-flow.ipynb
@@ -223,13 +223,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Upload files from sequencer via script [chromium_10x_upload.py](./project-flow-scripts/chromium_10x_upload.py):"
+    "Upload files from sequencer via script [chromium_10x_upload.py](https://github.com/laminlabs/lamin-usecases/blob/main/docs/project-flow-scripts/chromium_10x_upload.py):"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "!python project-flow-scripts/chromium_10x_upload.py"
@@ -255,13 +259,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[cellranger.py](./project-flow-scripts/cellranger.py)"
+    "[cellranger.py](https://github.com/laminlabs/lamin-usecases/blob/main/docs/project-flow-scripts/cellranger.py)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "!python project-flow-scripts/cellranger.py"
@@ -271,13 +279,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[postprocess_cellranger.py](./project-flow-scripts/postprocess_cellranger.py)"
+    "[postprocess_cellranger.py](https://github.com/laminlabs/lamin-usecases/blob/main/docs/project-flow-scripts/postprocess_cellranger.py)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "!python project-flow-scripts/postprocess_cellranger.py"
