--- a/docs/project-flow.ipynb
+++ b/docs/project-flow.ipynb
@@ -156,7 +156,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Access, transform & register data in drylab by `testuser2`:"
+    "Access, transform & register data in drylab by `testuser2` in notebook [hit-identification.ipynb](https://github.com/laminlabs/lamin-usecases/blob/main/docs/project-flow-scripts/hit-identification.ipynb)."
    ]
   },
   {
@@ -164,35 +164,17 @@
    "execution_count": null,
    "metadata": {
     "tags": [
-     "hide-output"
+     "hide-cell"
     ]
    },
    "outputs": [],
    "source": [
-    "# This function mimics the hit identification notebook\n",
-    "# In reality, you would run this in a notebook titled \"GWS CRIPSRa analysis\"\n",
-    "def mock_hit_identification_notebook():\n",
-    "    # log in as another user\n",
-    "    ln.setup.login(\"testuser2\")\n",
+    "# the following mimics the integrated analysis notebook\n",
+    "# In reality, you would execute inside the notebook\n",
+    "import nbproject_test\n",
+    "from pathlib import Path\n",
     "\n",
-    "    # create a new transform to mimic a new notebook\n",
-    "    # (in reality you just run ln.track() in a notebook and you don't have to manage runs)\n",
-    "    transform = ln.Transform(name=\"GWS CRIPSRa analysis\", type=\"notebook\")\n",
-    "    transform.save()\n",
-    "    run = ln.Run(transform=transform)\n",
-    "    run.save()\n",
-    "\n",
-    "    # access the upload artifact\n",
-    "    input_file = ln.Artifact.filter(key=\"schmidt22-crispra-gws-IFNG.csv\").one()\n",
-    "\n",
-    "    # identify hits\n",
-    "    input_df = input_file.load(is_run_input=run).set_index(\"id\")\n",
-    "    output_df = input_df[input_df[\"pos|fdr\"] < 0.01].copy()\n",
-    "\n",
-    "    # register hits in output artifact\n",
-    "    ln.Artifact.from_df(output_df, description=\"hits from schmidt22 crispra GWS\", run=run).save()\n",
-    "\n",
-    "mock_hit_identification_notebook()"
+    "nbproject_test.execute_notebooks(Path(\"../project-flow-scripts/hit-identification.ipynb\"), write=True)"
    ]
   },
   {
@@ -323,7 +305,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Integrate data in a notebook:"
+    "Integrate data in notebook [integrated-analysis.ipynb](https://github.com/laminlabs/lamin-usecases/blob/main/docs/project-flow-scripts/integrated-analysis.ipynb)."
    ]
   },
   {
@@ -331,48 +313,14 @@
    "execution_count": null,
    "metadata": {
     "tags": [
-     "hide-output"
+     "hide-cell"
     ]
    },
    "outputs": [],
    "source": [
-    "# This function mimics the integrated analysis notebook\n",
-    "# In reality, you would run this in a notebook titled \"Perform single cell analysis, integrate with CRISPRa screen\"\n",
-    "def mock_integrated_analysis_notebook():\n",
-    "    import scanpy as sc\n",
-    "\n",
-    "    # Create a new transform to mimic a new notebook\n",
-    "    # In reality you just run ln.track() in a notebook\n",
-    "    transform = ln.Transform(\n",
-    "        name=\"Perform single cell analysis, integrate with CRISPRa screen\",\n",
-    "        type=\"notebook\",\n",
-    "    )\n",
-    "    transform.save()\n",
-    "    run = ln.Run(transform=transform)\n",
-    "    run.save()\n",
-    "\n",
-    "    # access the output files of bfx pipeline and previous analysis\n",
-    "    file_ps = ln.Artifact.filter(description__icontains=\"perturbseq\").one()\n",
-    "    adata = file_ps.load(is_run_input=run)\n",
-    "    file_hits = ln.Artifact.filter(description=\"hits from schmidt22 crispra GWS\").one()\n",
-    "    screen_hits = file_hits.load(is_run_input=run)\n",
-    "\n",
-    "    # perform analysis and register output plot files\n",
-    "    sc.tl.score_genes(adata, adata.var_names.intersection(screen_hits.index).tolist())\n",
-    "    filesuffix = \"_fig1_score-wgs-hits.png\"\n",
-    "    sc.pl.umap(adata, color=\"score\", show=False, save=filesuffix)\n",
-    "    filepath = f\"figures/umap{filesuffix}\"\n",
-    "    artifact = ln.Artifact(filepath, key=filepath, run=run)\n",
-    "    artifact.save()\n",
-    "    filesuffix = \"fig2_score-wgs-hits-per-cluster.png\"\n",
-    "    sc.pl.matrixplot(\n",
-    "        adata, groupby=\"cluster_name\", var_names=[\"score\"], show=False, save=filesuffix\n",
-    "    )\n",
-    "    filepath = f\"figures/matrixplot_{filesuffix}\"\n",
-    "    artifact = ln.Artifact(filepath, key=filepath, run=run)\n",
-    "    artifact.save()\n",
-    "\n",
-    "mock_integrated_analysis_notebook()"
+    "# the following mimics the integrated analysis notebook\n",
+    "# In reality, you would execute inside the notebook\n",
+    "nbproject_test.execute_notebooks(Path(\"../project-flow-scripts/integrated-analysis.ipynb\"), write=True)"
    ]
   },
   {
