--- a/docs/project-flow-scripts/integrated-analysis.ipynb
+++ b/docs/project-flow-scripts/integrated-analysis.ipynb
@@ -23,6 +23,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "ln.settings.transform.stem_uid = \"lB3IyPLQSmvt\"\n",
+    "ln.settings.transform.version = \"1\"\n",
     "ln.track()"
    ]
   },
@@ -99,11 +101,34 @@
     "artifact = ln.Artifact(filepath, key=filepath)\n",
     "artifact.save()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ln.finish()"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "py310",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
