--- a/docs/project-flow.ipynb
+++ b/docs/project-flow.ipynb
@@ -174,7 +174,8 @@
     "import nbproject_test\n",
     "from pathlib import Path\n",
     "\n",
-    "nbproject_test.execute_notebooks(Path(\"../project-flow-scripts/hit-identification.ipynb\"), write=True)"
+    "cwd = Path.cwd()\n",
+    "nbproject_test.execute_notebooks(cwd / \"project-flow-scripts/hit-identification.ipynb\", write=True)"
    ]
   },
   {
@@ -320,7 +321,7 @@
    "source": [
     "# the following mimics the integrated analysis notebook\n",
     "# In reality, you would execute inside the notebook\n",
-    "nbproject_test.execute_notebooks(Path(\"../project-flow-scripts/integrated-analysis.ipynb\"), write=True)"
+    "nbproject_test.execute_notebooks(cwd / \"project-flow-scripts/integrated-analysis.ipynb\", write=True)"
    ]
   },
   {
@@ -457,7 +458,7 @@
    "source": [
     ":::{dropdown} When does an artifact appear as a run input?\n",
     "\n",
-    "When accessing an artifact via `stage()`, `load()` or `backed()`, two things happen:\n",
+    "When accessing an artifact via `cache()`, `load()` or `backed()`, two things happen:\n",
     "\n",
     "1. The current run gets added to `artifact.input_of`\n",
     "2. The transform of that artifact gets added as a parent of the current transform\n",
