--- a/docs/project-flow-scripts/hit-identification.ipynb
+++ b/docs/project-flow-scripts/hit-identification.ipynb
@@ -65,7 +65,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_df = input_file.load(is_run_input=run).set_index(\"id\")\n",
+    "input_df = input_file.load().set_index(\"id\")\n",
     "output_df = input_df[input_df[\"pos|fdr\"] < 0.01].copy()"
    ]
   },
@@ -82,7 +82,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.Artifact.from_df(output_df, description=\"hits from schmidt22 crispra GWS\", run=run).save()"
+    "ln.Artifact.from_df(output_df, description=\"hits from schmidt22 crispra GWS\").save()"
    ]
   },
   {
