--- a/docs/project-flow.ipynb
+++ b/docs/project-flow.ipynb
@@ -39,7 +39,15 @@
     "\n",
     "LaminDB interfaces workflow mangers for the former and embraces the latter.\n",
     "\n",
-    ":::"
+    ":::\n",
+    "\n",
+    "```{toctree}\n",
+    ":maxdepth: 1\n",
+    ":hidden:\n",
+    "\n",
+    "project-flow-scripts/hit-identification\n",
+    "project-flow-scripts/integrated-analysis\n",
+    "```"
    ]
   },
   {
@@ -156,7 +164,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Access, transform & register data in drylab by `testuser2` in notebook [hit-identification.ipynb](https://github.com/laminlabs/lamin-usecases/blob/main/docs/project-flow-scripts/hit-identification.ipynb)."
+    "Access, transform & register data in drylab by `testuser2` in notebook [hit-identification](project-flow-scripts/hit-identification)."
    ]
   },
   {
@@ -306,7 +314,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Integrate data in notebook [integrated-analysis.ipynb](https://github.com/laminlabs/lamin-usecases/blob/main/docs/project-flow-scripts/integrated-analysis.ipynb)."
+    "Integrate data in notebook [integrated-analysis](project-flow-scripts/integrated-analysis)."
    ]
   },
   {
