--- a/docs/project-flow.ipynb
+++ b/docs/project-flow.ipynb
@@ -39,7 +39,15 @@
     "\n",
     "LaminDB interfaces workflow mangers for the former and embraces the latter.\n",
     "\n",
-    ":::"
+    ":::\n",
+    "\n",
+    "```{toctree}\n",
+    ":maxdepth: 1\n",
+    ":hidden:\n",
+    "\n",
+    "project-flow-scripts/hit-identification\n",
+    "project-flow-scripts/integrated-analysis\n",
+    "```"
    ]
   },
   {
@@ -156,7 +164,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Access, transform & register data in drylab by `testuser2`:"
+    "Access, transform & register data in drylab by `testuser2` in notebook [hit-identification](project-flow-scripts/hit-identification)."
    ]
   },
   {
@@ -164,35 +172,18 @@
    "execution_count": null,
    "metadata": {
     "tags": [
-     "hide-output"
+     "hide-cell"
     ]
    },
    "outputs": [],
    "source": [
-    "# This function mimics the hit identification notebook\n",
-    "# In reality, you would run this in a notebook titled \"GWS CRIPSRa analysis\"\n",
-    "def mock_hit_identification_notebook():\n",
-    "    # log in as another user\n",
-    "    ln.setup.login(\"testuser2\")\n",
+    "# the following mimics the integrated analysis notebook\n",
+    "# In reality, you would execute inside the notebook\n",
+    "import nbproject_test\n",
+    "from pathlib import Path\n",
     "\n",
-    "    # create a new transform to mimic a new notebook\n",
-    "    # (in reality you just run ln.track() in a notebook and you don't have to manage runs)\n",
-    "    transform = ln.Transform(name=\"GWS CRIPSRa analysis\", type=\"notebook\")\n",
-    "    transform.save()\n",
-    "    run = ln.Run(transform=transform)\n",
-    "    run.save()\n",
-    "\n",
-    "    # access the upload artifact\n",
-    "    input_file = ln.Artifact.filter(key=\"schmidt22-crispra-gws-IFNG.csv\").one()\n",
-    "\n",
-    "    # identify hits\n",
-    "    input_df = input_file.load(is_run_input=run).set_index(\"id\")\n",
-    "    output_df = input_df[input_df[\"pos|fdr\"] < 0.01].copy()\n",
-    "\n",
-    "    # register hits in output artifact\n",
-    "    ln.Artifact.from_df(output_df, description=\"hits from schmidt22 crispra GWS\", run=run).save()\n",
-    "\n",
-    "mock_hit_identification_notebook()"
+    "cwd = Path.cwd()\n",
+    "nbproject_test.execute_notebooks(cwd / \"project-flow-scripts/hit-identification.ipynb\", write=True)"
    ]
   },
   {
@@ -223,13 +214,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Upload files from sequencer via script [chromium_10x_upload.py](./project-flow-scripts/chromium_10x_upload.py):"
+    "Upload files from sequencer via script [chromium_10x_upload.py](https://github.com/laminlabs/lamin-usecases/blob/main/docs/project-flow-scripts/chromium_10x_upload.py):"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "!python project-flow-scripts/chromium_10x_upload.py"
@@ -255,13 +250,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[cellranger.py](./project-flow-scripts/cellranger.py)"
+    "[cellranger.py](https://github.com/laminlabs/lamin-usecases/blob/main/docs/project-flow-scripts/cellranger.py)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "!python project-flow-scripts/cellranger.py"
@@ -271,13 +270,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[postprocess_cellranger.py](./project-flow-scripts/postprocess_cellranger.py)"
+    "[postprocess_cellranger.py](https://github.com/laminlabs/lamin-usecases/blob/main/docs/project-flow-scripts/postprocess_cellranger.py)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "!python project-flow-scripts/postprocess_cellranger.py"
@@ -311,7 +314,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Integrate data in a notebook:"
+    "Integrate data in notebook [integrated-analysis](project-flow-scripts/integrated-analysis)."
    ]
   },
   {
@@ -319,48 +322,14 @@
    "execution_count": null,
    "metadata": {
     "tags": [
-     "hide-output"
+     "hide-cell"
     ]
    },
    "outputs": [],
    "source": [
-    "# This function mimics the integrated analysis notebook\n",
-    "# In reality, you would run this in a notebook titled \"Perform single cell analysis, integrate with CRISPRa screen\"\n",
-    "def mock_integrated_analysis_notebook():\n",
-    "    import scanpy as sc\n",
-    "\n",
-    "    # Create a new transform to mimic a new notebook\n",
-    "    # In reality you just run ln.track() in a notebook\n",
-    "    transform = ln.Transform(\n",
-    "        name=\"Perform single cell analysis, integrate with CRISPRa screen\",\n",
-    "        type=\"notebook\",\n",
-    "    )\n",
-    "    transform.save()\n",
-    "    run = ln.Run(transform=transform)\n",
-    "    run.save()\n",
-    "\n",
-    "    # access the output files of bfx pipeline and previous analysis\n",
-    "    file_ps = ln.Artifact.filter(description__icontains=\"perturbseq\").one()\n",
-    "    adata = file_ps.load(is_run_input=run)\n",
-    "    file_hits = ln.Artifact.filter(description=\"hits from schmidt22 crispra GWS\").one()\n",
-    "    screen_hits = file_hits.load(is_run_input=run)\n",
-    "\n",
-    "    # perform analysis and register output plot files\n",
-    "    sc.tl.score_genes(adata, adata.var_names.intersection(screen_hits.index).tolist())\n",
-    "    filesuffix = \"_fig1_score-wgs-hits.png\"\n",
-    "    sc.pl.umap(adata, color=\"score\", show=False, save=filesuffix)\n",
-    "    filepath = f\"figures/umap{filesuffix}\"\n",
-    "    artifact = ln.Artifact(filepath, key=filepath, run=run)\n",
-    "    artifact.save()\n",
-    "    filesuffix = \"fig2_score-wgs-hits-per-cluster.png\"\n",
-    "    sc.pl.matrixplot(\n",
-    "        adata, groupby=\"cluster_name\", var_names=[\"score\"], show=False, save=filesuffix\n",
-    "    )\n",
-    "    filepath = f\"figures/matrixplot_{filesuffix}\"\n",
-    "    artifact = ln.Artifact(filepath, key=filepath, run=run)\n",
-    "    artifact.save()\n",
-    "\n",
-    "mock_integrated_analysis_notebook()"
+    "# the following mimics the integrated analysis notebook\n",
+    "# In reality, you would execute inside the notebook\n",
+    "nbproject_test.execute_notebooks(cwd / \"project-flow-scripts/integrated-analysis.ipynb\", write=True)"
    ]
   },
   {
@@ -497,7 +466,7 @@
    "source": [
     ":::{dropdown} When does an artifact appear as a run input?\n",
     "\n",
-    "When accessing an artifact via `stage()`, `load()` or `backed()`, two things happen:\n",
+    "When accessing an artifact via `cache()`, `load()` or `backed()`, two things happen:\n",
     "\n",
     "1. The current run gets added to `artifact.input_of`\n",
     "2. The transform of that artifact gets added as a parent of the current transform\n",
