♻️ Refactor analysis flow

--- a/docs/analysis-flow.ipynb
+++ b/docs/analysis-flow.ipynb
@@ -71,67 +71,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here we register an initial artifact with a pipeline script."
+    "Here we register an initial artifact with a pipeline script [register_example_file.py](https://github.com/laminlabs/lamin-usecases/blob/main/docs/analysis-flow-scripts/register_example_file.py)."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# register_example_file.py\n",
-    "\n",
-    "\n",
-    "def register_example_file():\n",
-    "    # create a pipeline transform to track the registration of the artifact\n",
-    "    transform = ln.Transform(\n",
-    "        name=\"register example artifact\", type=\"pipeline\", version=\"0.0.1\"\n",
-    "    )\n",
-    "    ln.track(transform=transform)\n",
-    "\n",
-    "    # an example dataset that has a few cell type, tissue and disease annotations\n",
-    "    adata = ln.core.datasets.anndata_with_obs()\n",
-    "\n",
-    "    # validate and register features\n",
-    "    genes = bt.Gene.from_values(\n",
-    "        adata.var_names,\n",
-    "        bt.Gene.ensembl_gene_id,\n",
-    "        organism=\"human\",\n",
-    "        )\n",
-    "    ln.save(genes)\n",
-    "    obs_features = ln.Feature.from_df(adata.obs)\n",
-    "    ln.save(obs_features)\n",
-    "\n",
-    "    # validate and register labels\n",
-    "    cell_types = bt.CellType.from_values(adata.obs[\"cell_type\"])\n",
-    "    ln.save(cell_types)\n",
-    "    tissues = bt.Tissue.from_values(adata.obs[\"tissue\"])\n",
-    "    ln.save(tissues)\n",
-    "    diseases = bt.Disease.from_values(adata.obs[\"disease\"])\n",
-    "    ln.save(diseases)\n",
-    "\n",
-    "    # register artifact and annotate with features & labels\n",
-    "    artifact = ln.Artifact.from_anndata(\n",
-    "        adata,\n",
-    "        description=\"anndata with obs\"\n",
-    "    )\n",
-    "    artifact.save()\n",
-    "    artifact.features.add_from_anndata(\n",
-    "        var_field=bt.Gene.ensembl_gene_id,\n",
-    "        organism=\"human\",\n",
-    "    )\n",
-    "    features = ln.Feature.lookup()\n",
-    "    artifact.labels.add(cell_types, features.cell_type)\n",
-    "    artifact.labels.add(tissues, features.tissue)\n",
-    "    artifact.labels.add(diseases, features.disease)\n",
-    "\n",
-    "\n",
-    "register_example_file()"
+    "!python analysis-flow-scripts/register_example_file.py"
    ]
   },
   {
@@ -146,7 +95,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Set the current notebook as the new transform:"
+    "Track the current notebook:"
    ]
   },
   {
@@ -266,10 +215,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_subset = ln.Artifact.from_anndata(\n",
-    "    adata_subset.to_memory(),\n",
-    "    description=\"anndata with obs subset\"\n",
-    ")"
+    "annotate = ln.Annotate.from_anndata(adata_subset.to_memory(), var_index=bt.Gene.ensembl_gene_id, categoricals={\"cell_type\": bt.CellType.name, \"disease\": bt.Disease.name, \"tissue\": bt.Tissue.name}, organism=\"human\")\n",
+    "annotate.validate()"
    ]
   },
   {
@@ -278,32 +225,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_subset.save()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file_subset.features.add_from_anndata(\n",
-    "    var_field=bt.Gene.ensembl_gene_id,\n",
-    "    organism=\"human\",  # optionally, globally set organism via bt.settings.organism = \"human\"\n",
-    "    )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "features = ln.Feature.lookup()\n",
-    "\n",
-    "file_subset.labels.add(adata_subset.obs.cell_type, features.cell_type)\n",
-    "file_subset.labels.add(adata_subset.obs.disease, features.disease)\n",
-    "file_subset.labels.add(adata_subset.obs.tissue, features.tissue)"
+    "artifact = annotate.save_artifact(description=\"anndata with obs subset\")\n",
+    "artifact.describe()"
    ]
   },
   {
@@ -378,20 +301,20 @@
    "outputs": [],
    "source": [
     "print(\"--> What is the history of this artifact?\\n\")\n",
-    "file_subset.view_lineage()\n",
+    "artifact.view_lineage()\n",
     "\n",
     "print(\"\\n\\n--> Which features and labels are associated with it?\\n\")\n",
-    "logger.print(file_subset.features)\n",
-    "logger.print(file_subset.labels)\n",
+    "logger.print(artifact.features)\n",
+    "logger.print(artifact.labels)\n",
     "\n",
     "print(\"\\n\\n--> Which notebook analyzed and registered this artifact\\n\")\n",
-    "logger.print(file_subset.transform)\n",
+    "logger.print(artifact.transform)\n",
     "\n",
     "print(\"\\n\\n--> By whom\\n\")\n",
-    "logger.print(file_subset.created_by)\n",
+    "logger.print(artifact.created_by)\n",
     "\n",
     "print(\"\\n\\n--> And which artifact is its parent\\n\")\n",
-    "display(file_subset.run.input_artifacts.df())"
+    "display(artifact.run.input_artifacts.df())"
    ]
   },
   {
