--- a/docs/analysis-flow.ipynb
+++ b/docs/analysis-flow.ipynb
@@ -77,7 +77,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "!python analysis-flow-scripts/register_example_file.py"
@@ -115,15 +119,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "artifact = ln.Artifact.filter(description=\"anndata with obs\").one()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "artifact = ln.Artifact.filter(description=\"anndata with obs\").one()\n",
     "artifact.describe()"
    ]
   },
@@ -215,7 +211,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "annotate = ln.Annotate.from_anndata(adata_subset.to_memory(), var_index=bt.Gene.ensembl_gene_id, categoricals={\"cell_type\": bt.CellType.name, \"disease\": bt.Disease.name, \"tissue\": bt.Tissue.name}, organism=\"human\")\n",
+    "annotate = ln.Annotate.from_anndata(\n",
+    "    adata_subset.to_memory(), \n",
+    "    var_index=bt.Gene.ensembl_gene_id, \n",
+    "    categoricals={\n",
+    "        \"cell_type\": bt.CellType.name, \n",
+    "        \"disease\": bt.Disease.name, \n",
+    "        \"tissue\": bt.Tissue.name,\n",
+    "    },\n",
+    "    organism=\"human\"\n",
+    ")\n",
+    "\n",
     "annotate.validate()"
    ]
   },
