--- a/docs/analysis-flow.ipynb
+++ b/docs/analysis-flow.ipynb
@@ -208,7 +208,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "annotate = ln.Annotate.from_anndata(\n",
@@ -228,10 +232,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "artifact = annotate.save_artifact(description=\"anndata with obs subset\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "artifact = annotate.save_artifact(description=\"anndata with obs subset\")\n",
     "artifact.describe()"
    ]
   },
