--- a/docs/sparql.ipynb
+++ b/docs/sparql.ipynb
@@ -12,7 +12,7 @@
    "metadata": {},
    "source": [
     "SPARQL is a query language used to retrieve and manipulate data stored in Resource Description Framework (RDF) format.\n",
-    "In this tutorial, we demonstrate how Bionty ontologies can be queried with SPARQL."
+    "In this tutorial, we demonstrate how lamindb registries can be queried with SPARQL."
    ]
   },
   {
