✨ Add celltypist back

--- a/docs/analysis-registries.ipynb
+++ b/docs/analysis-registries.ipynb
@@ -144,7 +144,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bt.CellType.inspect(adata.obs[\"cell_type_celltypist\"]);"
+    "public = bt.CellType.public()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "public.search(\"DC\")"
    ]
   },
   {
@@ -164,8 +173,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "cell_type_records = bt.CellType.from_values(adata.obs[\"cell_type_celltypist\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cell_type_records"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Register cell type of found synonym\n",
     "bt.CellType.from_public(name='plasmacytoid dendritic cell').save()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bt.CellType.inspect(adata.obs[\"cell_type_celltypist\"]);"
    ]
   },
   {
