--- a/docs/enrichr.ipynb
+++ b/docs/enrichr.ipynb
@@ -115,9 +115,9 @@
     "\n",
     "    \"ATF6-mediated Unfolded Protein Response (GO:0036500)\" -> (\"GO:0036500\", \"ATF6-mediated Unfolded Protein Response\")\n",
     "    \"\"\"\n",
-    "    id = key.split(\" \")[-1].replace(\"(\", \"\").replace(\")\", \"\")\n",
-    "    name = key.replace(f\" ({id})\", \"\")\n",
-    "    return (id, name)"
+    "    name, id = key.rsplit(\" (\", 1)\n",
+    "    id = id.rstrip(\")\")\n",
+    "    return id, name"
    ]
   },
   {
@@ -160,15 +160,7 @@
    },
    "outputs": [],
    "source": [
-    "bionty = bt.Pathway.public()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "bionty = bt.Pathway.public()\n",
     "bionty"
    ]
   },
@@ -202,15 +194,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pathway_records = bt.Pathway.from_values(go_bp_parsed.keys(), bt.Pathway.ontology_id)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "pathway_records = bt.Pathway.from_values(go_bp_parsed.keys(), bt.Pathway.ontology_id)\n",
     "ln.save(pathway_records, parents=False)  # not recursing through parents"
    ]
   },
@@ -236,38 +220,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_genes = {g for genes in go_bp.values() for g in genes}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "gene_records = bt.Gene.from_values(all_genes, bt.Gene.symbol)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gene_records[:3]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "all_genes = bt.Gene.standardize(list({g for genes in go_bp.values() for g in genes}))\n",
+    "gene_records = bt.Gene.from_values(all_genes, bt.Gene.symbol)\n",
     "ln.save(gene_records);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Manually register the 37 non-validated symbols:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inspect_result = bt.Gene.inspect(all_genes, bt.Gene.symbol)\n",
+    "\n",
+    "nonval_genes = []\n",
+    "for g in inspect_result.non_validated:\n",
+    "    nonval_genes.append(bt.Gene(symbol=g))\n",
+    "\n",
+    "ln.save(nonval_genes)"
    ]
   },
   {
@@ -292,7 +269,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gene_records_ids = {record.symbol: record for record in gene_records}"
+    "symbols_gene_records = {record.symbol: record for record in gene_records}"
    ]
   },
   {
@@ -303,7 +280,7 @@
    "source": [
     "for pathway_record in pathway_records:\n",
     "    pathway_genes = go_bp_parsed.get(pathway_record.ontology_id)[1]\n",
-    "    pathway_genes_records = [gene_records_ids.get(gene) for gene in pathway_genes]\n",
+    "    pathway_genes_records = [symbols_gene_records.get(gene) for gene in pathway_genes]\n",
     "    pathway_record.genes.set(pathway_genes_records)"
    ]
   },
@@ -322,6 +299,15 @@
    "outputs": [],
    "source": [
     "pathway_record.genes.list(\"symbol\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pathway_record.genes.list(\"ensembl_gene_id\")"
    ]
   },
   {
@@ -351,7 +337,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.10.13"
   },
   "nbproject": {
    "id": "6oxEIEduvo6w",
