--- a/docs/celltypist.ipynb
+++ b/docs/celltypist.ipynb
@@ -73,10 +73,7 @@
    "outputs": [],
    "source": [
     "import lamindb as ln\n",
-    "import bionty as bt\n",
-    "import pandas as pd\n",
-    "\n",
-    "bt.settings.organism = \"human\"  # globally set organism"
+    "import bionty as bt"
    ]
   },
   {
@@ -170,15 +167,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can now validate the `\"Cell Ontology ID\"` column\n",
-    "\n",
-    ":::{dropdown} When should I use `inspect()` and when `validate()`?\n",
-    "\n",
-    "{meth}`~lamindb.dev.CanValidate.inspect` gives us more logging than {meth}`~lamindb.dev.CanValidate.validate` but runs a bit slower.\n",
-    "\n",
-    "Hence, we'll use `inspect` if we suspect validation won't pass and we want to debug why to curate data.\n",
-    "\n",
-    ":::"
+    "We can now validate the `\"Cell Ontology ID\"` column:"
    ]
   },
   {
