--- a/docs/project-flow.ipynb
+++ b/docs/project-flow.ipynb
@@ -412,7 +412,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "transform = ln.Transform.search(\"Project flow\", return_queryset=True).first()\n",
+    "transform = ln.Transform.search(\"Project flow\").first()\n",
     "transform.parents.df()"
    ]
   },
@@ -503,7 +503,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "transform = ln.Transform.search(\"GWS CRIPSRa analysis\", return_queryset=True).first()"
+    "transform = ln.Transform.search(\"GWS CRIPSRa analysis\").first()"
    ]
   },
   {
