--- a/docs/facs3.ipynb
+++ b/docs/facs3.ipynb
@@ -73,7 +73,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bt.CellMarker.search(\"PD-1\").head(2)"
+    "bt.CellMarker.search(\"PD-1\").df().head(2)"
    ]
   },
   {
