--- a/docs/analysis-registries.ipynb
+++ b/docs/analysis-registries.ipynb
@@ -14,7 +14,7 @@
     "- {doc}`docs:public-ontologies`\n",
     "- {doc}`docs:bio-registries`\n",
     "- {doc}`docs:annotate`\n",
-    "- {doc}`docs:scrna`"
+    "- {doc}`inv:scrna`"
    ]
   },
   {
