--- a/docs/analysis-registries.ipynb
+++ b/docs/analysis-registries.ipynb
@@ -14,7 +14,7 @@
     "- {doc}`docs:public-ontologies`\n",
     "- {doc}`docs:bio-registries`\n",
     "- {doc}`docs:annotate`\n",
-    "- {doc}`inv:scrna`"
+    "- {doc}`docs:scrna`"
    ]
   },
   {
@@ -268,7 +268,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Register new features and labels (check out more details [here](docs:scrna)):"
+    "gRegister new features and labels (check out more details [here](./scrna)):"
    ]
   },
   {
