♻️ Fixes and prettifiation for 0.72

--- a/docs/facs2.ipynb
+++ b/docs/facs2.ipynb
@@ -402,34 +402,8 @@
    "source": [
     "collection_v2 = ln.Collection(\n",
     "    [artifact, collection_v1.artifacts[0]], is_new_version_of=collection_v1, version=\"2\"\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "collection_v2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "collection_v2.features"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "collection_v2"
+    ")\n",
+    "collection_v2.describe()"
    ]
   },
   {
@@ -439,16 +413,6 @@
    "outputs": [],
    "source": [
     "collection_v2.save()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "collection_v2.labels.add(efs.fluorescence_activated_cell_sorting, features.assay)\n",
-    "collection_v2.labels.add(organism.human, features.organism)"
    ]
   },
   {
