--- a/docs/facs3.ipynb
+++ b/docs/facs3.ipynb
@@ -155,8 +155,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "artifacts = ln.Artifact.filter(feature_sets__in=panels_with_cd8).list()\n",
-    "file1, file2 = artifacts[0], artifacts[1]"
+    "artifacts = ln.Artifact.filter(feature_sets__in=panels_with_cd8).list()"
    ]
   },
   {
@@ -165,7 +164,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "shared_markers = file1.features[\"var\"] & file2.features[\"var\"]\n",
+    "shared_markers = artifacts[0].features[\"var\"] & artifacts[1].features[\"var\"]\n",
     "shared_markers.list(\"name\")"
    ]
   }
