--- a/docs/facs4.ipynb
+++ b/docs/facs4.ipynb
@@ -125,17 +125,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "artifact = ln.Artifact(\"./figures/pca_cd8.pdf\", description=\"My result on CD8\")\n",
-    "\n",
-    "artifact.save()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "artifact = ln.Artifact(\"./figures/pca_cd8.pdf\", description=\"My result on CD8\").save()\n",
     "artifact.view_lineage()"
    ]
   },
