♻️ Fixes and prettifiation for 0.72 (#128)

--- a/docs/facs3.ipynb
+++ b/docs/facs3.ipynb
@@ -90,7 +90,6 @@
    "outputs": [],
    "source": [
     "markers = bt.CellMarker.lookup()\n",
-    "\n",
     "markers.cd8"
    ]
   },
@@ -155,8 +154,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "artifacts = ln.Artifact.filter(feature_sets__in=panels_with_cd8).list()\n",
-    "file1, file2 = artifacts[0], artifacts[1]"
+    "artifacts = ln.Artifact.filter(feature_sets__in=panels_with_cd8).list()"
    ]
   },
   {
@@ -165,7 +163,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "shared_markers = file1.features[\"var\"] & file2.features[\"var\"]\n",
+    "shared_markers = artifacts[0].features[\"var\"] & artifacts[1].features[\"var\"]\n",
     "shared_markers.list(\"name\")"
    ]
   }
