♻️ Make .add_from_anndata private

--- a/docs/spatial.ipynb
+++ b/docs/spatial.ipynb
@@ -152,7 +152,7 @@
     "    description=\"Suo22 Visium10X image F121_LP1_4LIV\"\n",
     ")\n",
     "file_ad.save()\n",
-    "file_ad.features.add_from_anndata(var_field=bt.Gene.ensembl_gene_id, organism=\"human\")"
+    "file_ad.features._add_from_anndata(var_field=bt.Gene.ensembl_gene_id, organism=\"human\")"
    ]
   },
   {
