--- a/docs/bulkrna.ipynb
+++ b/docs/bulkrna.ipynb
@@ -361,7 +361,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "curated_file.features._add_from_anndata(var_field=bt.Gene.stable_id, organism=\"saccharomyces cerevisiae\")"
+    "curated_file.features._add_set_from_anndata(var_field=bt.Gene.stable_id, organism=\"saccharomyces cerevisiae\")"
    ]
   },
   {
