--- a/docs/facs2.ipynb
+++ b/docs/facs2.ipynb
@@ -314,7 +314,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "artifact.features._add_from_anndata(var_field=bt.CellMarker.name)"
+    "artifact.features._add_set_from_anndata(var_field=bt.CellMarker.name)"
    ]
   },
   {
