♻️ Replace `.features.add_from_anndata()` with `.features._add_set_from_anndata()` (#129)

--- a/docs/analysis-registries.ipynb
+++ b/docs/analysis-registries.ipynb
@@ -318,7 +318,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "artifact.features.add_from_anndata(\n",
+    "artifact.features._add_set_from_anndata(\n",
     "    var_field=bt.Gene.symbol,\n",
     "    organism=\"human\", # optionally, globally set organism via bt.settings.organism = \"human\"\n",
     ")"
