📝 Update spatial use case

--- a/docs/spatial.ipynb
+++ b/docs/spatial.ipynb
@@ -74,7 +74,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Access ![](https://img.shields.io/badge/Access-10b981)"
+    "## An example spatial dataset"
    ]
   },
   {
@@ -127,7 +127,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Register ![](https://img.shields.io/badge/Register-10b981)"
+    "## Validate annotations"
    ]
   },
   {
@@ -147,12 +147,41 @@
    },
    "outputs": [],
    "source": [
-    "file_ad = ln.Artifact.from_anndata(\n",
-    "    adata,\n",
-    "    description=\"Suo22 Visium10X image F121_LP1_4LIV\"\n",
-    ")\n",
-    "file_ad.save()\n",
-    "file_ad.features._add_set_from_anndata(var_field=bt.Gene.ensembl_gene_id, organism=\"human\")"
+    "annotate = ln.Annotate.from_anndata(adata, var_index=bt.Gene.ensembl_gene_id, categoricals={\"sample\": ln.ULabel.name}, organism=\"human\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "annotate.validate()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "annotate.add_new_from('sample')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "annotate.validate()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Register annotated artifact"
    ]
   },
   {
@@ -165,8 +194,7 @@
    },
    "outputs": [],
    "source": [
-    "file_img = ln.Artifact(img_path, description=\"Suo22 image F121_LP1_4LIV\")\n",
-    "file_img.save()"
+    "artifact_ad = annotate.save_artifact(description=\"Suo22 Visium10X image F121_LP1_4LIV\")"
    ]
   },
   {
@@ -175,7 +203,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "collection = ln.Collection([file_ad, file_img], name=\"Suo22\")\n",
+    "artifact_ad.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Register a collection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "artifact_img = ln.Artifact(img_path, description=\"Suo22 image F121_LP1_4LIV\")\n",
+    "artifact_img.save()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "collection = ln.Collection([artifact_ad, artifact_img], name=\"Suo22\")\n",
     "collection.save()"
    ]
   },
