--- a/docs/facs4.ipynb
+++ b/docs/facs4.ipynb
@@ -133,10 +133,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Given the image is part of the notebook, there isn't an actual need to save it and you can also rely on the report that you'll create when saving the notebook via the command line via:\n",
+    "Given the image is part of the notebook, there isn't an actual need to save it and you can also rely on the report that you'll create when saving the notebook:\n",
     "\n",
     "```\n",
-    "lamin save <notebook_path>\n",
+    "ln.finish()\n",
     "```"
    ]
   },
