📝 Update facs annotation

--- a/docs/facs.ipynb
+++ b/docs/facs.ipynb
@@ -56,19 +56,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "!lamin init --storage ./test-facs --schema bionty"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
     "tags": []
    },
    "outputs": [],
@@ -87,8 +74,8 @@
    "outputs": [],
    "source": [
     "ln.settings.transform.stem_uid = \"OWuTtS4SApon\"\n",
-    "ln.settings.transform.version = \"0\"\n",
-    "ln.track()"
+    "ln.settings.transform.version = \"1\"\n",
+    "run = ln.track()"
    ]
   },
   {
@@ -437,25 +424,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "artifact = ln.Artifact.from_anndata(\n",
-    "    adata, description=\"Alpert19\"\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "artifact.save()"
+    "annotate = ln.Annotate.from_anndata(adata, var_index=bt.CellMarker.name, categoricals={})\n",
+    "annotate.validate()"
    ]
   },
   {
@@ -464,7 +437,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "artifact.features._add_set_from_anndata(var_field=bt.CellMarker.name)"
+    "artifact = annotate.save_artifact(description=\"Alpert19\")"
    ]
   },
   {
@@ -558,15 +531,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "artifact.view_lineage()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -615,15 +579,6 @@
    "outputs": [],
    "source": [
     "collection.save()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "collection.view_lineage()"
    ]
   }
  ],
