--- a/docs/facs.ipynb
+++ b/docs/facs.ipynb
@@ -75,7 +75,7 @@
    "source": [
     "ln.settings.transform.stem_uid = \"OWuTtS4SApon\"\n",
     "ln.settings.transform.version = \"1\"\n",
-    "run = ln.track()"
+    "ln.track()"
    ]
   },
   {
@@ -416,17 +416,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "features = ln.Feature.lookup()\n",
-    "experimental_factors = bt.ExperimentalFactor.lookup()\n",
-    "organisms = bt.Organism.lookup()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "annotate = ln.Annotate.from_anndata(adata, var_index=bt.CellMarker.name, categoricals={})\n",
     "annotate.validate()"
    ]
@@ -438,6 +427,26 @@
    "outputs": [],
    "source": [
     "artifact = annotate.save_artifact(description=\"Alpert19\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Add more labels:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "experimental_factors = bt.ExperimentalFactor.lookup()\n",
+    "organisms = bt.Organism.lookup()\n",
+    "\n",
+    "artifact.labels.add(experimental_factors.cytof)\n",
+    "artifact.labels.add(organisms.human)"
    ]
   },
   {
