--- a/docs/facs2.ipynb
+++ b/docs/facs2.ipynb
@@ -45,7 +45,7 @@
    "outputs": [],
    "source": [
     "ln.settings.transform.stem_uid = \"SmQmhrhigFPL\"\n",
-    "ln.settings.transform.version = \"0\"\n",
+    "ln.settings.transform.version = \"1\"\n",
     "ln.track()"
    ]
   },
@@ -103,7 +103,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import anndata as ad\n",
     "import pytometry as pm"
    ]
   },
@@ -277,26 +276,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "features = ln.Feature.lookup()\n",
-    "efs = bt.ExperimentalFactor.lookup()\n",
-    "organism = bt.Organism.lookup()\n",
-    "markers = bt.CellMarker.lookup()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "artifact = ln.Artifact.from_anndata(\n",
-    "    adata,\n",
-    "    description=\"Oetjen18_t1\"\n",
-    ")"
+    "annotate = ln.Annotate.from_anndata(adata, var_index=bt.CellMarker.name, categoricals={})\n",
+    "annotate.validate()"
    ]
   },
   {
@@ -305,42 +286,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "artifact.save()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "artifact.features._add_set_from_anndata(var_field=bt.CellMarker.name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "artifact.labels.add(efs.fluorescence_activated_cell_sorting, features.assay)\n",
-    "artifact.labels.add(organism.human, features.organism)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "artifact.features"
+    "artifact = annotate.save_artifact(description=\"Oetjen18_t1\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "View data flow:"
+    "Annotate with more labels:"
    ]
   },
   {
@@ -349,7 +302,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "artifact.view_lineage()"
+    "efs = bt.ExperimentalFactor.lookup()\n",
+    "organism = bt.Organism.lookup()\n",
+    "\n",
+    "artifact.labels.add(efs.fluorescence_activated_cell_sorting)\n",
+    "artifact.labels.add(organism.human)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "artifact.describe()"
    ]
   },
   {
@@ -366,6 +332,8 @@
    "outputs": [],
    "source": [
     "import scanpy as sc\n",
+    "\n",
+    "markers = bt.CellMarker.lookup()\n",
     "\n",
     "sc.pp.pca(adata)\n",
     "sc.pl.pca(adata, color=markers.cd8.name)"
@@ -413,15 +381,6 @@
    "outputs": [],
    "source": [
     "collection_v2.save()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "collection_v2.view_lineage()"
    ]
   }
  ],
